syntax = "proto3";

option go_package = "github.com/velibor7/XML/common/authentication";

package authentication;

import "google/api/annotations.proto";

service AuthService{
  rpc Login(LoginRequest) returns (JWTResponse) {
    option (google.api.http) = {
      post: "/auth/login",
      body: "user"
    };
  }
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/auth/register",
      body: "user"
    };
  }
}

message LoginRequest {
  UserCredential user = 1; 
}
            
message RegisterRequest { 
  UserCredential user = 1; 
}

message RegisterResponse {
  UserCredential user = 1; 
}
              
message JWTResponse {
  string token = 1;
  string id = 2;
  string username =3;
}
            
message UserCredential {
  string id = 1;
  string username = 2;
  string password = 3;
}
